# aoc

./: .gitignore  Cargo.toml  template.rs
src/: date.rs  input.rs  lib.rs  solutions.rs
src/solutions/: day1.rs  day2.rs  day3.rs  day6.rs  macros.rs  year_2022.rs  year_2023.rs  year_2024.rs
src/solutions/year_2022/: day4.rs  day5.rs
src/solutions/year_2023/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs
src/solutions/year_2024/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
