[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
itertools = "0.12.0"
lazy_static = "1.4.0"
maplit = "1.0.2"
num = "0.4.1"
regex = { version = "1.10.2", features = ["pattern"] }
reqwest = { version = "0.11.22", features = ["blocking"] }
rstest = "0.18.2"
strum = { version = "0.25.0", features = ["derive"] }
url = "2.4.1"
